--- a/app/views/brigades/index.html.erb
+++ b/app/views/brigades/index.html.erb
@@ -1,6 +1,6 @@
+<h1>List of all brigades</h1>
+
 <% @brigades.each do |brigade| %>
-  <p>
-    <%= brigade.name %><br />
-    <%= brigade.description %>
-  </p>
+  <h2><%= brigade.name %></h2>
+  <p><%= brigade.description %></p>
 <% end %>
