--- a/app/assets/stylesheets/brigades.css
+++ b/app/assets/stylesheets/brigades.css
@@ -16,3 +16,43 @@ h1 {
   margin-top: 10px;
   text-align: right;
 }
+
+/* Basic Grey */
+.basic-grey {
+  width: 1000px;
+  margin-right: auto;
+  margin-left: auto;
+  background: #EEE;
+  padding: 20px 30px 20px 30px;
+  font: 12px Georgia, "Times New Roman", Times, serif;
+  color: #888;
+  text-shadow: 1px 1px 1px #FFF;
+  border:1px solid #DADADA;
+}
+.basic-grey label {
+  display: block;
+  margin: 0px 0px 5px;
+}
+.basic-grey label>span {
+  float: left;
+  width: 80px;
+  text-align: right;
+  padding-right: 10px;
+  margin-top: 10px;
+  color: #888;
+}
+.basic-grey input[type="text"], .basic-grey textarea {
+  border: 1px solid #DADADA;
+  color: #888;
+  height: 24px;
+  margin-bottom: 16px;
+  margin-right: 6px;
+  margin-top: 2px;
+  outline: 0 none;
+  padding: 3px 3px 3px 5px;
+  width: 70%;
+  font: normal 12px/12px Georgia, "Times New Roman", Times, serif;
+}
+.basic-grey textarea{
+  height:100px;
+}
